# MIND

./: .gitignore  IFLOW.md  MARC_MIND_运行指南.md  pyproject.toml  quick_start.py
docs/: CBF_MPC_Algorithm_Design.md  MIND算法详细分析文档.md
tree/: FINAL_VALIDATION_REPORT.md  VALIDATION_REPORT.md
tree/examples/: advanced_scenario_demo.py  basic_usage.py  complex_scenario_demo.py  demo_1_scenario.py  demo_2_scenario.py  iteration_demo.py
tree/planners/: mind_planner.py
tree/plot/: visualization_demo_fixed.py
tree/scenario/: __init__.py  multimodal.py
tree/scenarios/: highway.py
tree/tests/: test_basic.py
tree/trajectory/: costs.py
tree/trajectory/optimizers/: cbf_optimizer.py  mpc_optimizer.py
tree/utils/: __init__.py  geometry.py
tree_marc/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  run_marc.py  validation_results.json
tree_marc/configs/: marc_config.json
tree_marc/examples/: marc_demo.py
tree_marc/planners/: __init__.py  mind_planner.py
tree_marc/planning/: __init__.py  bilevel_optimization.py  cvar_optimizer.py  risk_aware_planning.py
tree_marc/scenario/: __init__.py  branch_point.py  forward_reachable_set.py  policy_scenario_tree.py
tree_marc/tests/: __init__.py  test_marc_planner.py  validation_marc_vs_mind.py
tree_marc/trajectory/: __init__.py  trajectory_tree.py
tree_marc/trajectory/optimizers/: ilqr_optimizer.py  mpc_optimizer.py
tree_mind/: __init__.py
tree_mind/examples/: demo_3_scenario.py  demo_4_scenario.py  scenario_test.py  simple_test.py  场景说明文档.md
tree_mind/planners/: __init__.py
tree_mind/scenario/: aime.py  scenario_tree.py  uncertainty.py
tree_mind/scenarios/: __init__.py  intersection.py  lane_change.py  scenario_factory.py
tree_mind/trajectory/: __init__.py  dynamics.py  trajectory_tree.py
tree_mind/trajectory/optimizers/: __init__.py  ilqr_optimizer.py
tree_mind/utils/: tree.py
tree_racp/: __init__.py
